# obit-for-parseltongue

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml  tests.yml
include/: Obit.h  ObitAIPS.h  ObitAIPSCat.h  ObitAIPSDir.h  ObitCArray.h  ObitClassDef.h  ObitFArray.h  ObitFITS.h  ObitFile.h  ObitFileClassDef.h  ObitFileFITS.h  ObitImageClassDef.h  ObitImageMFDef.h  ObitInfoElem.h  ObitInfoList.h  ObitMem.h  ObitPrinterDef.h  ObitTablePCClassDef.h  ObitTableSUClassDef.h  ObitTypes.h  ObitUV.h  ObitUVGSolveDef.h  ObitUVGrid.h  ObitUVGridClassDef.h  ObitUVGridDef.h  ObitUVGridMFDef.h  ObitUVGridWB.h  ObitVersion.h
obit/: AIPSDir.inc  AIPSDir.py  FArray.inc  FArray.py  FITSDir.py  FITSFile.inc  FInterpolate.py  FitModel.py  FitRegion.py  History.py  Image.py  ImageDesc.inc  ImageDesc.py  ImageFit.inc  ImageFit.py  ImageMosaic.py  ImageUtil.inc  InfoList.inc  InfoList.py  OData.py  ODisplay.py  OErr.py  OSystem.py  OWindow.py  ObitErr.inc  ObitTypeMaps.swig  SkyGeom.py  Source.inc  Table.inc  Table.py  TableAN.inc  TableAT.inc  TableCD.inc  TableCT.inc  TableDesc.inc  TableDesc.py  TableIDI_ANTENNA.inc  TableIDI_ARRAY_GEOMETRY.inc  TableIDI_BANDPASS.inc  TableIDI_CALIBRATION.inc  (+23 more)
src/: Makefile.in  ObitAIPS.c  ObitAIPSCat.c  ObitAIPSDir.c  ObitAntenna.c  ObitAntennaList.c  ObitBeamShape.c  ObitCArray.c  ObitDConClean.c  ObitDConCleanVisWB.c  ObitData.c  ObitDoppler.c  ObitErr.c  ObitFArray.c  ObitFArrayUtil.c  ObitFFT.c  ObitFITS.c  ObitFInterpolate.c  ObitFile.c  ObitFileFITS.c  ObitFullBeam.c  ObitHistory.c  ObitIOHistoryAIPS.c  ObitIOImageAIPS.c  ObitIOImageFITS.c  ObitIOTableAIPS.c  ObitIOTableFITS.c  ObitIOUVAIPS.c  ObitIOUVFITS.c  ObitImage.c  ObitImageFit.c  ObitImageMF.c  ObitImageMosaic.c  ObitImageUtil.c  ObitImageWB.c  ObitInfoElem.c  ObitInfoList.c  ObitIonCal.c  ObitMem.c  ObitPlot.c  (+38 more)
tests/: test_farray.py  test_infolist.py
