[metadata]
name = obit
version = 0.1.0
author = Bill Cotton
description = Obit for ParselTongue
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-2
license_files = LICENSE
url = https://github.com/voitsik/obit-for-parseltongue
keywords = astronomy, astrophysics, Obit, AIPS
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Astronomy

[options]
setup_requires = pkgconfig
install_requires = six
python_requires = >=3.6
