[metadata]
name = obit
version = 0.2.0
description = Obit for ParselTongue
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/voitsik/obit-for-parseltongue
author = Bill Cotton
license = GPL-2.0
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Astronomy
keywords = astronomy, astrophysics, Obit, AIPS

[options]
install_requires =
    six
python_requires = >=3.7
setup_requires =
    pkgconfig
