[metadata]
name = obit
version = 0.2.0
description = Obit for ParselTongue
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/voitsik/obit-for-parseltongue
author = Bill Cotton
license = GPL-2.0
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Astronomy
keywords = astronomy, astrophysics, Obit, AIPS

[options]
python_requires = >=3.8
setup_requires =
    pkgconfig
